finish photoblog, add back and forth arrows to quickly flick through photos, change css so photos show up correctly on smaller and larger sized screens

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -276,10 +276,19 @@ body {
     background: grey;
     border-bottom: 2px solid black;
     transition: all 0.3s linear;
+    -moz-transition: all 0.3 linear;
+    -webkit-transition: all 0.3 linear;
+    -ms-transition: all 0.3s linear;
+    -o-transition: all 0.3s linear;
     width: 92%;
     bottom: 80px;
     transform: scaleX(0);
+    -ms-transform: scaleX(0); /* IE 9 */
+    -moz-transform: scaleX(0); /* Firefox */
+    -webkit-transform: scaleX(0); /* Safari and Chrome */
+    -o-transform: scaleX(0); /* Opera */
 }
+
 
 #commentContainerEdit {
     border: 2px solid lightgrey;
@@ -294,7 +303,7 @@ body {
     background: grey;
     border-bottom: 2px solid black;
     transition: all 0.3s linear;
-    width: 33%;
+    width: 34.5%;
     bottom: 100px;
     transform: scaleX(0);
 }
@@ -518,14 +527,15 @@ body {
 
 .modal {
     overflow: auto;
-    padding-top: 80px;
+    padding-top: 70px;
     background-color: rgb(0,0,0); /* Fallback color */
     background-color: rgba(0,0,0,0.6); /* Black w/ opacity */
 }
 
 .modal-content {
     width: 70%;
-    margin: auto;
+    max-width: 1020px;
+    margin: 0 auto;
     display: block;
 }
 
@@ -610,7 +620,52 @@ body {
 
 @media screen and (min-width: 600px) {
     .navbar-center {
-    position: absolute;
-    left: 450px;
+    position: relative;
+    left: 23%;
     }
+}
+
+#banner {
+    text-shadow: 1px 1px 8px #428bca;
+}
+
+
+.thumbnail.user > p {
+    opacity: 0;
+    transition: opacity 0.3s;
+}
+
+.thumbnail.user:hover > p {
+    opacity: 1;
+    
+}
+
+#userName {
+}
+
+.fa-chevron-left {
+    position: absolute;
+    left: 10%;
+    bottom: 45%;
+    color: white;
+    transition: color 0.2s;
+    
+}
+
+.fa-chevron-right {
+    position: absolute;
+    right: 10%;
+    bottom: 45%;
+    color: white;
+    transition: color 0.2s;
+}
+
+.fa-chevron-left:hover, 
+.fa-chevron-left:focus,
+.fa-chevron-right:hover,
+.fa-chevron-right:focus {
+    color: #bbb;
+    cursor: pointer;
+    text-decoration: none;
+    
 }
